# seroost

./: Cargo.toml
lib/: Cargo.toml
lib/src/: lexer.rs  lib.rs  model.rs
lib/src/snowball/: snowball_env.rs
lib/src/snowball/algorithms/: english_stemmer.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
