[package]
name = "seroost_server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
seroost_lib = { path = "../lib" }
poppler-rs = "0.23.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tiny_http = "0.12.0"
xml-rs = "0.8.4"
